--- a/Node Port Mode/nodeport-deployment.yaml
+++ b/Node Port Mode/nodeport-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       serviceAccountName: k8s-bigip-ctlr-1
       containers:
-        - name: k8s-bigip-ctlr-1
+        - name: k8s-bigip-ctlr
           image: "f5networks/k8s-bigip-ctlr:latest"
           imagePullPolicy: IfNotPresent
           env:
@@ -34,7 +34,7 @@ spec:
           args: [
             "--bigip-username=$(BIGIP_USERNAME)",
             "--bigip-password=$(BIGIP_PASSWORD)",
-            "--bigip-url=https://10.1.1.10:8443",
+            "--bigip-url=https://10.1.1.10:443",
             "--insecure=true",
             "--bigip-partition=kubernetes",
             "--namespace=default",
