--- a/Node Port Mode/nodeport-deployment.yaml
+++ b/Node Port Mode/nodeport-deployment.yaml
@@ -38,6 +38,5 @@ spec:
             "--insecure=true",
             "--bigip-partition=kubernetes",
             "--namespace=default",
-            "--pool-member-type=nodeport",
-            "--log-level=DEBUG"
+            "--pool-member-type=nodeport"
           ]
