--- a/Cluster Mode/bigip-node.yaml
+++ b/Cluster Mode/bigip-node.yaml
@@ -4,9 +4,9 @@ metadata:
   name: bigip1
   annotations:
     #Replace IP with Self-IP for your deployment
-    flannel.alpha.coreos.com/public-ip: "10.1.1.4"
+    flannel.alpha.coreos.com/public-ip: "10.1.1.13"
     #Replace MAC with your BIGIP Flannel VXLAN Tunnel MAC
-    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"2c:c2:60:23:0c:58"}'
+    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"02:2b:2b:9f:83:21"}'
     flannel.alpha.coreos.com/backend-type: "vxlan"
     flannel.alpha.coreos.com/kube-subnet-manager: "true"
 spec:
