--- a/Cluster Mode/clusterip-deployment.yaml
+++ b/Cluster Mode/clusterip-deployment.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: k8s-bigip-ctlr
+  name: k8s-bigip-ctlr-2
   namespace: kube-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: k8s-bigip-ctlr
+      app: k8s-bigip-ctlr-2
   template:
     metadata:
-      name: k8s-bigip-ctlr
+      name: k8s-bigip-ctlr-2
       labels:
-        app: k8s-bigip-ctlr
+        app: k8s-bigip-ctlr-2
     spec:
-      serviceAccountName: k8s-bigip-ctlr
+      serviceAccountName: k8s-bigip-ctlr-2
       containers:
         - name: k8s-bigip-ctlr
-          image: "f5networks/k8s-bigip-ctlr:latest"
+          image: "f5networks/k8s-bigip-ctlr:1.14"
           imagePullPolicy: IfNotPresent
           env:
             - name: BIGIP_USERNAME
@@ -34,7 +34,7 @@ spec:
           args: [
             "--bigip-username=$(BIGIP_USERNAME)",
             "--bigip-password=$(BIGIP_PASSWORD)",
-            "--bigip-url=https://10.1.1.4:8443",
+            "--bigip-url=https://10.1.1.13:8443",
             "--insecure=true",
             "--bigip-partition=kubernetes",
             "--namespace=default",
