--- a/Cluster Mode/clusterip-service-hello-world.yaml
+++ b/Cluster Mode/clusterip-service-hello-world.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: f5-hello-world-web
+  name: f5-hello-world-web-2
   namespace: default
   labels:
     app: f5-hello-world-web
@@ -10,7 +10,7 @@ metadata:
     cis.f5.com/as3-pool: web_pool
 spec:
   ports:
-  - name: f5-hello-world-web
+  - name: f5-hello-world-web-2
     port: 8080
     protocol: TCP
     targetPort: 8080
