--- a/Cluster Mode/deployment-hello-world.yaml
+++ b/Cluster Mode/deployment-hello-world.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: f5-hello-world-web
+  name: f5-hello-world-web-2
   namespace: default
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: f5-hello-world-web
+      app: f5-hello-world-web-2
   template:
     metadata:
       labels:
-        app: f5-hello-world-web
+        app: f5-hello-world-web-2
     spec:
       containers:
       - env:
