--- a/Node Port Mode/service-to-NGINX.yaml
+++ b/Node Port Mode/service-to-NGINX.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-   name: nginx-ingress
+   name: cis-to-nginx-ingress
    namespace: nginx-ingress
    labels:
      cis.f5.com/as3-tenant: AS3
