--- a/Cluster Mode/configmap-hello-world-with-waf.yaml
+++ b/Cluster Mode/configmap-hello-world-with-waf.yaml
@@ -9,39 +9,59 @@ metadata:
 data:
   template: |
     {
-        "class": "AS3",
-        "declaration": {
-            "class": "ADC",
-            "schemaVersion": "3.10.0",
-            "id": "urn:uuid:33045210-3ab8-4636-9b2a-c98d22ab915d",
-            "label": "http",
-            "remark": "A1 example",
-            "AS3": {
-                "class": "Tenant",
-                "A1": {
-                    "class": "Application",
-                    "template": "http",
-                    "serviceMain": {
-                        "class": "Service_HTTP",
-                        "virtualAddresses": [
-                            "10.1.1.13"
-                        ],
-                        "pool": "web_pool",
-                        "virtualPort": 80
-                    },
-                    "web_pool": {
-                        "class": "Pool",
-                        "monitors": [
-                            "http"
-                        ],
-                        "members": [
-                            {
-                                "servicePort": 8080,
-                                "serverAddresses": []
-                            }
-                        ]
+       "class":"ADC",
+       "schemaVersion":"3.5.0",
+       "id": "5489432",
+       "Tenant_A":{
+       "class":"Tenant",
+       "app_1":{
+                "class":"Application",
+                "template":"generic",
+                "app_1_vs_https":{
+                                    "remark":"app_1.demo.com",
+                                    "class":"Service_HTTPS",
+                                    "virtualAddresses":[
+                                                        "10.1.1.13"
+                                                        ],
+                                    "virtualPort":443,
+                                    "redirect80": true,
+                                    "snat":"auto",
+                                    "policyWAF":{
+                                    "use":"app_1_waf"
+                                },
+                "pool":"app_1_pool",
+                "serverTLS": "cs_ssl_profile_app_1",
+            },
+        "app_1_pool":{
+                        "class":"Pool",
+                        "monitors":[
+                                    "http"
+                                    ],
+                        "members":[
+                                    {
+                                        "servicePort":8080,
+                                        "serverAddresses": []
+                                    }
+                                ]
+                        },
+         "cs_ssl_profile_app_1": {
+                                "class": "TLS_Server",
+                                "certificates": [{
+                                                 "certificate": "ssl_cert_app_1"
+                                                }]
+                                },
+         "ssl_cert_app_1": {
+                            "class": "Certificate",
+                            "passphrase": {
+                                            "ciphertext": "{{ passphrase | string | b64encode }}",
+                                            "protected": "eyJhbGciOiJkaXIiLCJlbmMiOiJmNXN2In0",
+                                            "ignoreChanges": true
+                                        },
+                            "pkcs12": { "url": "https://github.com/harrykleinb/remotefiles/blob/master/www.checkfive.fr.pfx?raw=true"}
+                          },
+         "app_1_waf":{
+                        "class":"WAF_Policy",
+                        "url":"https://raw.githubusercontent.com/f5devcentral/f5-asm-policy-templates/master/generic_ready_template/Rapid_Depolyment_Policy_13_1.xml",
+                        "ignoreChanges":false
                     }
-                }
-            }
         }
-    }
