--- a/Cluster Mode/bigip-node.yaml
+++ b/Cluster Mode/bigip-node.yaml
@@ -6,7 +6,7 @@ metadata:
     #Replace IP with Self-IP for your deployment
     flannel.alpha.coreos.com/public-ip: "10.1.1.13"
     #Replace MAC with your BIGIP Flannel VXLAN Tunnel MAC
-    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"02:7a:0d:78:2a:21"}'
+    flannel.alpha.coreos.com/backend-data: '{"VtepMAC":"02:8e:eb:45:95:f0"}'
     flannel.alpha.coreos.com/backend-type: "vxlan"
     flannel.alpha.coreos.com/kube-subnet-manager: "true"
 spec:
